[tool.poetry]
name = "openaqdb"
version = "0.1.0"
description = ""
authors = ["OpenAQ <info@openaq.org>"]
readme = "README.md"

[tool.pytest.ini_options]
pythonpath = "api"
log_format = "[%(asctime)s] %(levelname)s [%(name)s:%(lineno)s] %(message)s"
log_date_format = "%H:%M:%S"
log_level = "DEBUG"
filterwarnings = [
  "ignore::DeprecationWarning"
  ]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.2.2"
psycopg-binary = "^3.2.1"
psycopg = "^3.2.1"
pydantic-settings = "^2.3.4"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
