[tool.poetry]
name = "openaqdb"
version = "0.1.0"
description = ""
authors = ["OpenAQ <info@openaq.org>"]
readme = "README.md"

[tool.poetry.group.dev.dependencies]
boto3 = "^1.35.0"
requests = "^2.32.3"
migra = "^3.0.1663481299"
psycopg2 = "^2.9.9"

[tool.pytest.ini_options]
pythonpath = "api"
log_format = "[%(asctime)s] %(levelname)s [%(name)s:%(lineno)s] %(message)s"
log_date_format = "%H:%M:%S"
log_level = "DEBUG"
filterwarnings = [
  "ignore::DeprecationWarning"
  ]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.2.2"
psycopg-binary = "^3.2.1"
psycopg = "^3.2.1"
pydantic-settings = "^2.3.4"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
